Overflow .task fixed

--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -144,6 +144,7 @@ pre{
 	
 	border-bottom: 1px dotted $primary-text-color;
 	
+	overflow:hidden;
 	line-height: 30px;
 	font-size: 0.8em;
 	
